# ai-daily-bot

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  SUPPORT.md  ai_daily_bot_repo.md  generate_project.sh  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
config/: env.example  sources.yaml
docs/: architecture.md  architecture.mmd  roadmap.md
prompts/: ai_daily_prompt.md  ai_weekly_prompt.md
scripts/: ai_daily_report.sh  ai_weekly_report.sh
src/ai_daily_bot/: __init__.py  collector.py  formatter.py  runner.py
tests/: __init__.py  test_collector.py  test_formatter.py  test_runner.py
tools/: telegram_send.json
